kustomize/base/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-stable
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service-canary
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend-rollout
  labels:
    app: frontend
spec:
  replicas: 1
  strategy:
    canary:
      canaryService: frontend-service-canary
      stableService: frontend-service-stable
      trafficRouting:
        plugins:
          argoproj-labs/gatewayAPI:
            httpRoute: mern-route
      steps:
        - setWeight: 20
        - pause: {}
        - setWeight: 60
        - pause: { duration: 10s }
        - setWeight: 100
        - pause: { duration: 10s }
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      name: frontend
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/atkaridarshan04/cloudnative-devops-blueprint/bookstore-frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
